Full Parity Harness Results
First run with actual EPQ and JAMA jar files compared against Math2.py.